# PyNCulture

./: README.md  __init__.py  backup_shape.py  dxftools.py  geom_utils.py  plot.py  pync_log.py  pyproject.toml  requirements.txt  setup.py  shape.py  shape_io.py  svgtools.py  tools.py  triangulate.py  units.py
dxf_import/: __init__.py  homcoord.py  read_dxf.py
examples/: backup_shape.py  gen_obstacles.py  load_culture.py  load_shapes.py
